@@ -1,7 +1,6 @@
 package net.vulkanmod.vulkan.shader;
 
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
-import org.lwjgl.system.MemoryStack;
 import org.lwjgl.system.MemoryUtil;
 import org.lwjgl.system.NativeResource;
 import org.lwjgl.util.shaderc.ShadercIncludeResolveI;
@@ -11,31 +10,32 @@ import org.lwjgl.vulkan.VK12;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.ByteBuffer;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.charset.StandardCharsets;
+import java.util.StringTokenizer;
+import java.util.regex.Pattern;
 
 import static org.lwjgl.system.MemoryUtil.NULL;
 import static org.lwjgl.system.MemoryUtil.memASCII;
+import static org.lwjgl.system.MemoryUtil.memAlloc;
+import static org.lwjgl.system.MemoryUtil.memFree;
+import static org.lwjgl.system.MemoryUtil.memUTF8;
 import static org.lwjgl.util.shaderc.Shaderc.*;
 
 public class SPIRVUtils {
     private static final boolean DEBUG = false;
     private static final boolean OPTIMIZATIONS = true;
+    private static final int MAX_INCLUDE_DEPTH = 32;
 
     private static long compiler;
     private static long options;
 
-    //The dedicated Includer and Releaser Inner Classes used to Initialise #include Support for ShaderC
     private static final ShaderIncluder SHADER_INCLUDER = new ShaderIncluder();
     private static final ShaderReleaser SHADER_RELEASER = new ShaderReleaser();
     private static final long pUserData = 0;
 
     private static ObjectArrayList<String> includePaths;
+    private static final Pattern RESERVED_SAMPLER_IDENTIFIER = Pattern.compile("\\bsampler\\b");
 
     private static float time = 0.0f;
 
@@ -67,20 +67,20 @@ public class SPIRVUtils {
 
         includePaths = new ObjectArrayList<>();
         addIncludePath("/assets/vulkanmod/shaders/include/");
+        addIncludePath("/assets/minecraft/shaders/include/");
     }
 
     public static void addIncludePath(String path) {
-        URL url = SPIRVUtils.class.getResource(path);
-
-        if(url != null)
-            includePaths.add(url.toExternalForm());
+        if(!path.endsWith("/")) path = path + "/";
+        includePaths.add(path);
     }
 
     public static SPIRV compileShaderAbsoluteFile(String shaderFile, ShaderKind shaderKind) {
-        try {
-            String source = new String(Files.readAllBytes(Paths.get(new URI(shaderFile))));
+        try (InputStream is = openResource(shaderFile)) {
+            if (is == null) throw new RuntimeException("Shader not found in classpath: " + shaderFile);
+            String source = new String(is.readAllBytes(), java.nio.charset.StandardCharsets.UTF_8);
             return compileShader(shaderFile, source, shaderKind);
-        } catch (IOException | URISyntaxException e) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
         return null;
@@ -89,6 +89,7 @@ public class SPIRVUtils {
     public static SPIRV compileShader(String filename, String source, ShaderKind shaderKind) {
         long startTime = System.nanoTime();
 
+        source = rewriteLegacyReservedIdentifiers(source);
         long result = shaderc_compile_into_spv(compiler, source, shaderKind.kind, filename, "main", options);
 
         if(result == NULL) {
@@ -99,9 +100,23 @@ public class SPIRVUtils {
             throw new RuntimeException("Failed to compile shader " + filename + " into SPIR-V:\n" + shaderc_result_get_error_message(result));
         }
 
-        time += (System.nanoTime() - startTime) / 1000000.0f;
+        long elapsed = System.nanoTime() - startTime;
+        time += elapsed / 1000000.0f;
+
+        recordCompileForProfiler(elapsed);
 
         return new SPIRV(result, shaderc_result_get_bytes(result));
+    }
+
+    private static void recordCompileForProfiler(long elapsed) {
+        try {
+            if (net.vulkanmod.compat.observer.CompatProfiler.ENABLED) {
+                net.vulkanmod.compat.observer.CompatProfiler.shaderCompileCount++;
+                net.vulkanmod.compat.observer.CompatProfiler.spirvCompileTimeNanos += elapsed;
+            }
+        } catch (LinkageError ignored) {
+
+        }
     }
 
     private static SPIRV readFromStream(InputStream inputStream) {
@@ -118,6 +133,125 @@ public class SPIRVUtils {
         throw new RuntimeException("unable to read inputStream");
     }
 
+    private static InputStream openResource(String resourcePath) {
+        String classLoaderPath = resourcePath.startsWith("/") ? resourcePath.substring(1) : resourcePath;
+        ClassLoader contextClassLoader = Thread.currentThread().getContextClassLoader();
+        if (contextClassLoader != null) {
+            InputStream stream = contextClassLoader.getResourceAsStream(classLoaderPath);
+            if (stream != null) {
+                return stream;
+            }
+        }
+        return SPIRVUtils.class.getResourceAsStream(resourcePath);
+    }
+
+    private static InputStream openNamespacedShaderInclude(String requested) {
+        String resourcePath = toNamespacedIncludePath(requested);
+        if (resourcePath == null) {
+            return null;
+        }
+
+        return openResource(resourcePath);
+    }
+
+    private static String toNamespacedIncludePath(String requested) {
+        int namespaceSeparator = requested.indexOf(':');
+        if (namespaceSeparator <= 0 || namespaceSeparator == requested.length() - 1) {
+            return null;
+        }
+
+        String namespace = requested.substring(0, namespaceSeparator);
+        String path = requested.substring(namespaceSeparator + 1);
+        return "/assets/" + namespace + "/shaders/include/" + path;
+    }
+
+    private static InputStream openShaderInclude(String requested) {
+        InputStream namespacedInclude = openNamespacedShaderInclude(requested);
+        if (namespacedInclude != null) {
+            return namespacedInclude;
+        }
+
+        for(String includePath : includePaths) {
+            String fullPath = includePath + requested;
+            InputStream include = openResource(fullPath);
+            if(include != null) {
+                return include;
+            }
+        }
+
+        return null;
+    }
+
+    private static byte[] readIncludeBytes(InputStream inputStream) throws IOException {
+        String source = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+        return rewriteLegacyReservedIdentifiers(expandMojImports(source, 0)).getBytes(StandardCharsets.UTF_8);
+    }
+
+    static String rewriteLegacyReservedIdentifiers(String source) {
+        return RESERVED_SAMPLER_IDENTIFIER.matcher(source).replaceAll("samplerTexture");
+    }
+
+    private static String expandMojImports(String source, int depth) throws IOException {
+        if (depth > MAX_INCLUDE_DEPTH) {
+            throw new IOException("Shader include depth exceeded " + MAX_INCLUDE_DEPTH);
+        }
+
+        String[] lines = source.split("\\R", -1);
+        StringBuilder builder = new StringBuilder(source.length());
+
+        for (int i = 0; i < lines.length; i++) {
+            String importPath = parseMojImportPath(lines[i]);
+            if (importPath != null) {
+                builder.append(readShaderInclude(importPath, depth + 1));
+            } else {
+                builder.append(lines[i]);
+            }
+
+            if (i < lines.length - 1) {
+                builder.append('\n');
+            }
+        }
+
+        return builder.toString();
+    }
+
+    private static String readShaderInclude(String requested, int depth) throws IOException {
+        try (InputStream inputStream = openShaderInclude(requested)) {
+            if (inputStream == null) {
+                throw new IOException("Unable to find nested include " + requested);
+            }
+
+            String source = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+            return expandMojImports(source, depth);
+        }
+    }
+
+    private static String parseMojImportPath(String line) {
+        StringTokenizer tokenizer = new StringTokenizer(line);
+        if (!tokenizer.hasMoreTokens()) {
+            return null;
+        }
+
+        if (!"#moj_import".equals(tokenizer.nextToken())) {
+            return null;
+        }
+
+        if (tokenizer.countTokens() != 1) {
+            return null;
+        }
+
+        String importPath = tokenizer.nextToken();
+        if (importPath.startsWith("<") && importPath.endsWith(">")) {
+            return importPath.substring(1, importPath.length() - 1);
+        }
+
+        if (importPath.startsWith("\"") && importPath.endsWith("\"")) {
+            return importPath.substring(1, importPath.length() - 1);
+        }
+
+        return importPath;
+    }
+
     public enum ShaderKind {
         VERTEX_SHADER(shaderc_glsl_vertex_shader),
         GEOMETRY_SHADER(shaderc_glsl_geometry_shader),
@@ -131,45 +265,59 @@ public class SPIRVUtils {
         }
     }
 
+    static ByteBuffer encodeIncludeSourceName(String sourceName) {
+        return memUTF8(sourceName);
+    }
+
     private static class ShaderIncluder implements ShadercIncludeResolveI {
-
-        private static final int MAX_PATH_LENGTH = 4096; //Maximum Linux/Unix Path Length
-
         @Override
         public long invoke(long user_data, long requested_source, int type, long requesting_source, long include_depth) {
             var requesting = memASCII(requesting_source);
             var requested = memASCII(requested_source);
 
-            try(MemoryStack stack = MemoryStack.stackPush()) {
-                Path path;
-
-                for(String includePath : includePaths) {
-                    path = Paths.get(new URI(String.format("%s%s", includePath, requested)));
-
-                    if(Files.exists(path)) {
-                        byte[] bytes = Files.readAllBytes(path);
-
-                        return ShadercIncludeResult.malloc(stack)
-                                .source_name(stack.ASCII(requested))
-                                .content(stack.bytes(bytes))
-                                .user_data(user_data).address();
+            try {
+                try (InputStream is = openShaderInclude(requested)) {
+                    if(is != null) {
+                        return createIncludeResult(requested, readIncludeBytes(is), user_data);
                     }
                 }
-            } catch (IOException | URISyntaxException e) {
-                throw new RuntimeException(e);
+            } catch (IOException e) {
+                return createIncludeError(requesting, requested, e.getMessage(), user_data);
             }
 
-            throw new RuntimeException(String.format("%s: Unable to find %s in include paths", requesting, requested));
+            return createIncludeError(requesting, requested, "Unable to find include in registered include paths", user_data);
+        }
+
+        private static long createIncludeResult(String sourceName, byte[] content, long userData) {
+            ByteBuffer sourceNameBuffer = encodeIncludeSourceName(sourceName);
+            ByteBuffer contentBuffer = memAlloc(content.length);
+            contentBuffer.put(content).flip();
+
+            return ShadercIncludeResult.malloc()
+                    .source_name(sourceNameBuffer)
+                    .content(contentBuffer)
+                    .user_data(userData)
+                    .address();
+        }
+
+        private static long createIncludeError(String requesting, String requested, String reason, long userData) {
+            String message = String.format("%s: Unable to include %s: %s", requesting, requested, reason);
+            return createIncludeResult("", message.getBytes(StandardCharsets.UTF_8), userData);
         }
     }
 
-    //TODO: Don't actually need the Releaser at all, (MemoryStack frees this for us)
-    //But ShaderC won't let us create the Includer without a corresponding Releaser, (so we need it anyway)
     private static class ShaderReleaser implements ShadercIncludeResultReleaseI {
 
         @Override
         public void invoke(long user_data, long include_result) {
-            //TODO:Maybe dump Shader Compiled Binaries here to a .Misc Diretcory to allow easy caching.recompilation...
+            if (include_result == NULL) {
+                return;
+            }
+
+            ShadercIncludeResult result = ShadercIncludeResult.create(include_result);
+            memFree(result.source_name());
+            memFree(result.content());
+            result.free();
         }
     }
 
@@ -189,9 +337,8 @@ public class SPIRVUtils {
 
         @Override
         public void free() {
-//            shaderc_result_release(handle);
-            bytecode = null; // Help the GC
+
+            bytecode = null;
         }
     }
-
 }
